# nws-api-client-python

./: .gitignore  LICENSE  README.md  RELEASES.md  USAGE.md  code_samples.yaml  merged_openapi.yaml  openapi.yaml  openapi_error_overlay.yaml  openapi_overlay.yaml  openapi_overlay_errors.yaml  openapi_overlay_operationids.yaml  pyproject.toml
.devcontainer/: README.md  setup.sh
.github/workflows/: sdk_generation.yaml  sdk_publish.yaml
.speakeasy/: gen.yaml  lint.yaml  workflow.yaml
docs/errors/: badrequesterror.md  internalservererror.md  notfounderror.md  ratelimitederror.md  timeouterrort.md  unauthorizederror.md
docs/models/: address.md  alert.md  alertatomentry.md  alertatomentryauthor.md  alertatomfeed.md  alertatomfeedauthor.md  alertcap.md  alertcollectiongeojson.md  alertcollectiongeojsonfeature.md  alertcollectionjsonld.md  alertgeojson.md  alertgeojsontype.md  alertjsonld.md  alertmessagetype.md  alertmessagetypeparameter.md  alertregiontype.md  alertsactiveareaarea.md  alertsactivearearequest.md  alertsactivearearesponse.md  alertsactivearearesponseresult.md  alertsactivecountresponse.md  alertsactivecountresponsebody.md  alertsactivecountresponseresult.md  alertsactiveregionrequest.md  alertsactiveregionresponse.md  alertsactiveregionresponseresult.md  alertsactiverequest.md  alertsactiveresponse.md  alertsactiveresponseresult.md  alertsactivezonerequest.md  alertsactivezoneresponse.md  alertsactivezoneresponseresult.md  alertsqueryrequest.md  alertsqueryresponse.md  alertsqueryresponseresult.md  alertssinglerequest.md  (+414 more)
scripts/: prepare_readme.py
(+691 files in other folders)
