[project]
name = "nws-api-client"
version = "0.13.1"
description = "OpenAPI Client SDK for National Weather Service API (NWS / weather.gov)"
authors = [{ name = "Dustin Miller" },]
readme = "README-PYPI.md"
requires-python = ">=3.9"
dependencies = [
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]

[tool.poetry]
homepage = "https://github.com/spdustin/nws-api-client-python"
repository = "https://github.com/spdustin/nws-api-client-python.git"
documentation = "https://github.com/spdustin/nws-api-client-python"
packages = [
    { include = "nws_api_client", from = "src" }
]
include = ["py.typed", "src/nws_api_client/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/nws_api_client/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


